feat: replace moko plugin with klibs

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,30 @@
 org.gradle.jvmargs=-Xmx4096m
 org.gradle.configureondemand=false
 org.gradle.parallel=true
-
 kotlin.code.style=official
 kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.mpp.enableCInteropCommonization=true
-
 android.useAndroidX=true
 android.enableJetifier=true
-
-moko.android.targetSdk=33
-moko.android.compileSdk=33
-moko.android.minSdk=19
-
-moko.publish.name=MOKO tensorflow
-moko.publish.description=Tensorflow Lite bindings for mobile (android & ios) Kotlin Multiplatform development
-moko.publish.repo.org=icerockdev
-moko.publish.repo.name=moko-tensorflow
-moko.publish.license=Apache-2.0
-moko.publish.developers=Tetraquark|Vladislav Areshkin|vareshkin@icerockdev.com
+# Android
+makeevrserg.android.sdk.min=21
+makeevrserg.android.sdk.target=33
+makeevrserg.android.sdk.compile=33
+# Java
+makeevrserg.java.source=8
+makeevrserg.java.target=17
+makeevrserg.java.ktarget=17
+# Project
+makeevrserg.project.name=MOKO tensorflow
+makeevrserg.project.group=dev.icerock.moko
+makeevrserg.project.version.string=0.3.0
+makeevrserg.project.description=Tensorflow Lite bindings for mobile (android & ios) Kotlin Multiplatform development
+makeevrserg.project.developers=Tetraquark|Vladislav Areshkin|vareshkin@icerockdev.com
+makeevrserg.project.url=https://github.com/NeuroDive/neurodive-sdk
+# Publish
+makeevrserg.publish.repo.name=moko-tensorflow
+makeevrserg.publish.groupId=dev.icerock.moko
+makeevrserg.publish.description=SDK for NeuroDive garniture
+makeevrserg.publish.repo.org=icerockdev
+makeevrserg.publish.name=moko-tensorflow
+makeevrserg.publish.license=Apache-2.0
